tests/ui/impl-trait/impl-fn-predefined-lifetimes.stderr
error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/impl-fn-predefined-lifetimes.rs:7:9
   |
LL | fn a<'a>() -> impl Fn(&'a u8) -> (impl Debug + '_) {
   |                                                -- this generic parameter of the opaque must be used with a generic lifetime parameter
...
LL |     |x| x
   |         ^ expected generic lifetime parameter, found `'_`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0792`.
